Fix to duration getter. Having a nightmare with ui builders so just formatting it as a string for now.